# treziks_tale

./: Cargo.toml  IDEA.md  MOVEMENTS.md  README.md
src/: camera.rs  game.rs  main.rs  main_menu.rs  player.rs  systems.rs
src/game/: player.rs  ui.rs
src/game/player/: actions.rs  health.rs  inventory.rs
src/game/ui/: components.rs  layout.rs  systems.rs
src/main_menu/: components.rs  layout.rs  systems.rs
src/player/: actions.rs  inventory.rs
