[package]
name = "trezikstale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
leafwing-input-manager = "0.11.2"
bevy-inspector-egui = "0.22.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1